feat: create task delete route & swagger request
