# src/config/swagger.yaml
@@ -172,3 +172,26 @@ paths:
       responses:
         "201":
           description: create new task successfully
+  /tasks/{taskId}:
+    delete:
+      tags:
+        - Task
+      parameters:
+        - in: path
+          name: taskId
+          schema:
+            type: string
+          required: true
+      requestBody:
+        description: delete task
+        required: true
+        content:
+          application/json:
+            schema:
+              type: "object"
+              properties:
+                columnId:
+                  type: string
+      responses:
+        "200":
+          description: task removed
