# src/routes/task-router.ts
@@ -1,8 +1,9 @@
-import { createTask } from "controllers";
+import { createTask, deleteTask } from "controllers";
 import express from "express";
 
 const taskRouter = express.Router();
 
 taskRouter.post("/tasks", createTask);
+taskRouter.delete("/tasks/:taskId", deleteTask);
 
 export default taskRouter;
